src/test/egern/success/function_no_return.egern
func noReturn(a) {
    print(a);
}
