src/test/egern/fail/print_void_fail.egern
func empty(): void { }
print(empty());
